[package]
name = "zsplit"
version = "0.2.1"
authors = ["ZSchoen <dev@zschoen.dev>"]
edition = "2018"
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://zschoen.dev/projects/zsplit"
repository = "https://github.com/TheAlgorythm/zsplit"
documentation = "https://docs.rs/crate/zsplit"
description = "Split text into multiple files"
keywords = ["split", "text", "coreutils", "cli", "utility"]
categories = ["command-line-utilities"]
exclude = ["/scripts", "*.drawio"]

[profile.release]
lto = "thin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0", features = ["derive"] }
thiserror = "1.0"
bool_ext = "0.5"
human-panic = "1.0"
exitcode = "1.1"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0"

