[package]
name = "zsplit"
version = "0.2.1"
authors = ["ZSchoen <dev@zschoen.dev>"]
edition = "2018"
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://zschoen.dev/projects/zsplit"
repository = "https://github.com/TheAlgorythm/zsplit"
documentation = "https://docs.rs/crate/zsplit"
description = "Split text into multiple files by line"
keywords = ["split", "text", "coreutils", "cli", "utility"]
categories = ["command-line-utilities"]
exclude = ["/scripts", "*.drawio"]

[[bin]]
name = "zsplit"
required-features = ["cli-app"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
cli-app = ["clap", "thiserror", "bool_ext", "human-panic", "exitcode"]

[dependencies]
clap = { version = "3.0.0", features = ["derive"], optional = true }
thiserror = { version = "1.0", optional = true }
bool_ext = { version = "0.5", optional = true }
human-panic = { version = "1.0", optional = true }
exitcode = { version = "1.1", optional = true }

[dev-dependencies]
itertools = "0.10.3"
assert_cmd = "2.0"
assert_fs = "1.0"
exitcode = "1.1"

[profile.release]
lto = "thin"
