[workspace]
members = [
  "zsplit",
  "zsplit-cli",
]
resolver = "2"

[workspace.package]
authors = ["zSchoen <dev@zschoen.dev>"]
readme = "README.md"
homepage = "https://zschoen.dev/projects/zsplit"
repository = "https://github.com/TheAlgorythm/zsplit"

[profile.release]
lto = "thin"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_abi = "warn"
missing_docs = "warn"
noop_method_call = "warn"
pointer_structural_match = "warn"
unreachable_pub = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
unused_tuple_struct_fields = "warn"

[workspace.lints.clippy]
use_self = "warn"
clone_on_ref_ptr = "warn"
cognitive_complexity = "warn"
pedantic = "warn"
as_conversions = "warn"
dbg_macro = "warn"
empty_structs_with_brackets = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
let_underscore_must_use = "warn"
map_err_ignore = "warn"
negative_feature_names = "warn"
pub_without_shorthand = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_feature_names = "warn"
redundant_type_annotations = "warn"
ref_patterns = "warn"
rest_pat_in_fully_bound_structs = "warn"
str_to_string = "warn"
string_add = "warn"
string_slice = "warn"
string_to_string = "warn"
tests_outside_test_module = "warn"
undocumented_unsafe_blocks = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
unwrap_used = "warn"
wildcard_dependencies = "warn"
