[package]
name = "zsplit-cli"
version = "0.3.0"
edition = "2018"
license = "GPL-3.0-or-later"
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Split text into multiple files by line"
keywords = ["split", "text", "coreutils", "cli", "utility"]
categories = ["command-line-utilities", "text-editors", "filesystem"]
exclude = ["/scripts", "*.drawio"]

[[bin]]
name = "zsplit"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zsplit = "0.3"
# zsplit.path = "../zsplit"
clap = { version = "3.0.0", features = ["derive"] }
thiserror = "1.0"
error-stack = "0.4"
bool_ext = "0.5"
human-panic = "1.0"
exitcode = "1.1"

[dev-dependencies]
zsplit.features = ["test_mock"]
itertools = "0.10.3"
assert_fs = "1.0"
assert_cmd = "2.0"
escargot = "0.5"
