[package]
name = "zsplit-cli"
version = "0.4.0"
edition = "2021"
rust-version = "1.66"
license = "GPL-3.0-only"
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Split text into multiple files by line"
keywords = ["split", "text", "coreutils", "cli", "utility"]
categories = ["command-line-utilities", "text-editors", "filesystem"]
exclude = ["/scripts", "*.drawio"]

[[bin]]
name = "zsplit"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zsplit = { version = "~0.4", path = "../zsplit" }
clap = { version = "3.0", features = ["derive"] }
thiserror = "1.0"
error-stack = "0.4"
bool_ext = "0.5"
human-panic = "=1.2.3"
sysexits = "0.7"

[dev-dependencies]
zsplit = { version = "~0.4", path = "../zsplit", features = ["test_mock"] }
itertools = "0.12"
assert_fs = "1.0"
assert_cmd = "2.0"
escargot = "0.5"

[lints]
workspace = true
