[package]
name = "zsplit"
version = "0.3.0"
edition = "2018"
license = "LGPL-3.0-or-later"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
documentation = "https://docs.rs/crate/zsplit"
description = "Split text into multiple files by line"
keywords = ["split", "text"]
categories = ["algorithms", "filesystem"]
exclude = ["/scripts", "*.drawio"]

[features]
default = []
test_mock = []
