[package]
name = "zsplit"
version = "0.4.0"
edition = "2021"
rust-version = "1.64"
license = "LGPL-3.0-only"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
documentation = "https://docs.rs/crate/zsplit"
description = "Split text into multiple files by line"
keywords = ["split", "text"]
categories = ["algorithms", "filesystem"]
exclude = ["/scripts", "*.drawio"]

[features]
default = []
test_mock = []

[lints]
workspace = true
